--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -285,84 +285,94 @@ nav {
     @include flex(column, center, center);
     font-family: 'Roboto', sans-serif;
 }
-.contenedorWallet{
+
+.contenedorWallet {
     @extend .contenedor;
-    @include flex(row,flex-start,center);
+    @include flex(row, flex-start, center);
     padding: 0px 20px;
-    
+
 }
 
 
 
 
-.menu{
-    @include flex(column,flex-start,center);
-    width:300px;
+.menu {
+    @include flex(column, flex-start, center);
+    width: 300px;
     height: 100%;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: #ddd;
     padding: 15px;
 }
-.contenedorUsuario{
-    @include flex(row,flex-start ,center );
+
+.contenedorUsuario {
+    @include flex(row, flex-start, center);
     width: 100%;
     height: 50px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.61) ;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.61);
     padding-bottom: 10px;
-    img{
+
+    img {
         height: 100%;
         width: auto;
         margin-right: 5px;
     }
-    p{
+
+    p {
         margin: 0px;
         font-weight: bold;
     }
 }
-.contenedorOpciones{
+
+.contenedorOpciones {
     @include flex(column, space-around, flex-start);
     width: 100%;
-    height:  40%;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.61) ;
+    height: 40%;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.61);
 }
-.contenedorOpcion{
+
+.contenedorOpcion {
     width: 90%;
     border-bottom: 2px solid rgba(0, 0, 0, 0.171);
-    button{
+
+    button {
         width: fit-content;
         font-size: 20px;
-        background-color:#ddd ;
+        background-color: #ddd;
         border: none;
         margin-bottom: 10px;
         transition: all .3s;
-        &:hover{
+
+        &:hover {
             transition: all .3s;
             transform: scale(1.1);
         }
     }
-    
-}
-.iconoOpcion{
-    width: 40px;
-    height: auto;
-    margin-right: 10px; 
+
 }
 
-.wallet{
-    @include flex(column, flex-start,flex-start );
+.iconoOpcion {
+    width: 40px;
+    height: auto;
+    margin-right: 10px;
+}
+
+.wallet {
+    @include flex(column, flex-start, flex-start);
     width: 80%;
     height: 100%;
     padding: 30px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.171);
 
 }
+
 .contenedorSaldoAcciones {
     @include flex(row, flex-start, flex-start);
     width: 100%;
     height: 50%;
     border: 2px solid black;
-    
+
 }
 
 .contenedorSaldo {
@@ -381,8 +391,9 @@ nav {
         text-shadow: 2px 1px 0px #7A7A7A
     }
 }
-.pesosDolares{
-    button{
+
+.pesosDolares {
+    button {
         transition: all .3s;
         border: none;
         margin-right: 10px;
@@ -392,9 +403,10 @@ nav {
         border-radius: 10px;
     }
 }
-.botonSeleccionado{
+
+.botonSeleccionado {
     transition: all .3s;
-    border-color: #0052cc!important;
+    border-color: #0052cc !important;
     transform: scale(1.1)
 }
 
@@ -414,14 +426,13 @@ nav {
 }
 
 .contenedorAcciones {
-    @include flex(column, flex-start , flex-start);
+    @include flex(column, flex-start, flex-start);
     width: 100%;
     height: 50%;
-    h3{
-        
-    }
+
+    h3 {}
 }
- 
+
 .acciones {
     @include flex(column, center, center);
     width: 100%;
@@ -437,7 +448,7 @@ nav {
     input {
         font-size: 2em;
         width: 30%;
-        background-color:#172b4d;
+        background-color: #172b4d;
         color: white;
         border: none;
         border-radius: 10px;
@@ -458,11 +469,14 @@ nav {
         }
     }
 }
-.valorDolar{
+
+.valorDolar {
     width: 100%;
-    p{
+
+    p {
         font-size: 25px;
-        span{
+
+        span {
             color: #0052cc;
         }
     }
